<resources>
    <!--Screen Home-->
    <string name="text_home">Transforme custos em \n lucro com o ArtPrice!</string>
    <string name="text_sub_txt">Precifique seus produtos de forma simples e eficiente. Faça o seu lucro crescer!</string>
    <string name="btn_start">Iniciar</string>

    <!--Screen Main-->
    <string name="app_name">ArtPrice</string>
    <string name="erro1">Digite o peso total da resina e o valor</string>
    <string name="erro2">Digite o peso da peça, o tipo de lucro e o lucro</string>
    <string-array name="peso_resina">
        <item>Escolha o peso da total da resina</item>
        <item>25g</item>
        <item>50g</item>
        <item>100g</item>
        <item>145g</item>
        <item>150g</item>
        <item>310g</item>
        <item>335g</item>
        <item>500g</item>
        <item>750g</item>
        <item>1kg</item>
        <item>1,5kg</item>
        <item>7,5kg</item>
    </string-array>
    <string-array name="opcao_calculo">
        <item>Multiplicação</item>
        <item>Porcentagem</item>
    </string-array>

    <!--Screen Result-->
    <string name="text_valor_peca">Valor da Peça</string>
    <string name="text_acessorio">Acessorio</string>
    <string name="text_mao_obra">Mão de Obra</string>
    <string name="text_taxa">Taxa</string>
    <string name="text_total_venda">Valor Total de Venda</string>

</resources>