<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/color_main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/imagem_inicio"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_home"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/color_lyrics"
        android:lineSpacingExtra="8dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sub_txt"
        android:textSize="18sp"
        android:textColor="@color/color_lyrics"
        android:lineSpacingExtra="8dp"
        android:letterSpacing="0.05"
        android:padding="20dp"
        android:gravity="center"/>
    
    <Button
        android:id="@+id/btnStart"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/color_main"
        android:padding="15dp"
        android:backgroundTint="@color/color_lyrics"
        />

</LinearLayout>